Search bar icon spacing issue fix

--- a/src/components/home/search.module.scss
+++ b/src/components/home/search.module.scss
@@ -59,7 +59,7 @@
     }
     .locationInputWrap{
       width: 100%;
-      margin-left: 12px;
+      margin-left: 5px;
       position: relative;
       input{
         width: 100%;
@@ -83,9 +83,8 @@
       font-weight: 600;
     }
     .location {
-      padding: 15px;
       display: flex;
-      padding: 20px;
+      padding: 15px;
       align-items: center;
     }
     .searchButton {
